--- a/lokovei-ERP/package.json
+++ b/lokovei-ERP/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon entry.js"
   },
   "dependencies": {
+    "babel": "^5.8.21",
     "body-parser": "~1.10.2",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
