--- a/lokovei-ERP/package.json
+++ b/lokovei-ERP/package.json
@@ -3,16 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon entry.js"
+    "start": "nodemon entry.js",
+    "test": "mocha"
   },
   "dependencies": {
     "babel": "^5.8.21",
+    "bluebird": "^2.9.34",
     "body-parser": "~1.10.2",
+    "chai": "^3.2.0",
     "cookie-parser": "~1.3.3",
-    "debug": "~2.1.1",
+    "debug": "^2.1.3",
     "express": "~4.11.1",
     "jade": "~1.9.1",
+    "mocha": "^2.2.5",
+    "mongoose": "^4.1.3",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
+    "request": "^2.61.0",
+    "serve-favicon": "~2.2.0",
+    "supertest": "^1.0.1"
   }
 }
