--- a/lokovei-ERP/package.json
+++ b/lokovei-ERP/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "~1.3.3",
     "debug": "^2.1.3",
     "express": "~4.11.1",
+    "express-session": "^1.11.3",
     "jade": "~1.9.1",
     "mocha": "^2.2.5",
     "mongoose": "^4.1.3",
